[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcheckd"
version = "1.0.0"
description = "Health check daemon for AWS ALB/NLB with Prometheus metrics"
license = "Unlicense"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "sdnotify",
    "pyyaml",
    "prometheus_client",
    "tomli; python_version < '3.11'",
]

[project.scripts]
healthcheckd = "healthcheckd.__main__:main"
