[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcheckd"
version = "1.1.0"
description = "Health check daemon for AWS ALB/NLB with Prometheus metrics"
license = "Unlicense"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "pyyaml",
    "prometheus_client",
]

[project.scripts]
healthcheckd = "healthcheckd.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
